--- a/src/app/faculty-dashboard/faculty-dashboard.component.css
+++ b/src/app/faculty-dashboard/faculty-dashboard.component.css
@@ -420,3 +420,31 @@ aside.w-64 {
 .research-highlight:hover::before {
   opacity: 1;
 }
+
+/* Profile Modal Styles */
+.profile-modal {
+  overflow: hidden;
+  border-radius: 0.5rem;
+}
+
+/* Fix profile modal button hover overflow */
+.profile-modal button {
+  border-radius: 0;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.profile-modal button:first-child {
+  border-top-left-radius: 0.375rem;
+  border-top-right-radius: 0.375rem;
+}
+
+.profile-modal button:last-child {
+  border-bottom-left-radius: 0.375rem;
+  border-bottom-right-radius: 0.375rem;
+}
+
+.profile-modal .py-2 {
+  padding-top: 0;
+  padding-bottom: 0;
+}
